# libra-rs

./: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
assets/: tailwind.css
migrations/: 0001_books_table.sql
src/: config.rs  main.rs  route.rs
src/component/: book.rs  error.rs  mod.rs  other.rs
src/model/: book.rs
